--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,15 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif !important;
+  outline: none !important;
+  border: 0;
 }
 
 body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     sans-serif;
-  background-color: #f8f9fa;
+  background-color: white;
   color: #333;
 }
