--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -4,7 +4,6 @@
   top: 88px;
   left: 0;
   height: calc(100vh - 88px);
-
   padding-top: 20px;
   font-family: "Roboto", sans-serif;
   border-right: 1px solid #ddd;
@@ -16,17 +15,29 @@
   width: 250px;
 }
 
+.sidebar-header-container {
+  padding: 1.5rem;
+}
+
 .sidebar-header {
-  padding: 15px 20px;
-  font-size: 20px;
-  font-weight: 500;
-  color: #02080e;
-  border-bottom: 1px solid #1b0cee;
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-align: center;
+  color: #1f2937;
+  border-bottom: 2px solid #3b82f6;
+  padding-bottom: 0.5rem;
+}
+
+.sidebar-menu .dot-green {
+  margin-left: -28px;
+  margin-right: 6px;
+  vertical-align: middle;
+  font-size: 1.8em;
 }
 
 .sidebar-menu {
   list-style: none;
-  padding: 0;
+  padding: 10px;
   margin: 0;
 }
 
@@ -49,25 +60,23 @@
   font-size: 16px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .sidebar {
     display: none !important;
   }
 }
 
-/* Tablet (Portrait and Landscape) */
-@media (min-width: 769px) and (max-width: 1100px) {
+@media (min-width: 601px) and (max-width: 1024px) {
   .sidebar {
     display: none !important;
   }
 }
 
-/* Desktop */
-@media (min-width: 1100px) {
+@media (min-width: 1025px) {
   .sidebar {
     top: 88px;
     height: calc(100vh - 88px);
-    width: 250px; /* Persistent sidebar on desktop */
+    width: 250px;
   }
   .sidebar.open {
     width: 250px;
