--- a/frontend/src/components/Pricelist/Pricelist.css
+++ b/frontend/src/components/Pricelist/Pricelist.css
@@ -343,10 +343,12 @@
     margin-bottom: 0;
     padding-left: 1rem;
   }
-  
 }
 
 @media (min-width: 601px) and (max-width: 1024px) {
+  .pl-col-instock {
+    display: block !important;
+  }
   .pl-header {
     flex-direction: row;
     flex-wrap: nowrap;
@@ -360,8 +362,8 @@
     padding-left: 30px;
   }
   .pl-search-section {
-    width: 70%;
-    max-width: 70%;
+    width: 30%;
+    max-width: 30%;
     margin-bottom: 0;
   }
   .pl-container {
@@ -369,8 +371,8 @@
     margin-bottom: 0 !important;
   }
   .pl-action-buttons {
-    width: 70%;
-    max-width: 70%;
+    width: 50%;
+    max-width: 50%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -393,7 +395,7 @@
   .pl-action-btn {
     padding-left: 0.9rem !important;
     padding-right: 0.7rem !important;
-    min-width: 108px;
+    min-width: 78px;
     min-height: 70px;
     justify-content: center;
   }
