--- a/frontend/src/components/Pricelist/Pricelist.css
+++ b/frontend/src/components/Pricelist/Pricelist.css
@@ -346,7 +346,8 @@
 }
 
 @media (min-width: 601px) and (max-width: 1024px) {
-  .pl-col-instock {
+  .pl-col-instock,
+  .pl-col-unit {
     display: block !important;
   }
   .pl-header {
