--- a/frontend/src/components/Pricelist/Pricelist.css
+++ b/frontend/src/components/Pricelist/Pricelist.css
@@ -96,6 +96,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  padding-right: 30px;
 }
 
 .pl-action-btn {
@@ -347,6 +348,7 @@
 
 @media (min-width: 601px) and (max-width: 1024px) {
   .pl-col-instock,
+  .pl-col-articleno,
   .pl-col-unit {
     display: table-cell !important;
   }
@@ -378,7 +380,7 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-end;
-    gap: 1.9rem;
+    gap: 0.9rem;
     margin-bottom: 0;
     padding-right: 50px;
   }
@@ -394,14 +396,12 @@
     display: none !important;
   }
   .pl-action-btn {
-    padding-left: 0.9rem !important;
-    padding-right: 0.7rem !important;
-    min-width: 78px;
-    min-height: 70px;
+    min-width: 98px;
+    min-height: 60px;
     justify-content: center;
   }
   .pl-action-btn-icon {
-    font-size: 2.2rem;
+    font-size: 2rem;
     margin-right: 0.5rem;
   }
 }
